# motllo

./: .gitignore  README.md  paquefile.yaml  pylintrc  pyproject.toml
examples/: python_cli.md
motllo/: build.py  main.py  markdown.py  markdown_parser.py  ops.py  read_markdown.py  traverser.py  tree_parser.py
tests/: test_idempotent.py  test_parse_tree.py  test_parser.py  test_path_traverser.py
