[tool.poetry]
name = "motllo"
version = "0.1.2"
description = "Project patterns like I like them"
authors = ["Ruben Berenguel <ruben+poetry@mostlymaths.net>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/rberenguel/motllo"

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^4.1.0"
pyyaml = "^5.3"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
flake8 = "^3.7.9"
isort = "^4.3.21"
black = "^19.10b0"
mypy = "^0.770"
monkeytype = "^19.11.2"
paque = "^0.1.0"

[tool.poetry.scripts]
motllo = 'motllo.main:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

